--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       DATABASE_URL: 'mysql2://root:root@db:3306'
     depends_on:
       - db
+    tty: true
+    stdin_open: true
 
   db:
     container_name: maria
