--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   web:
-    container_name: rails
+    container_name: rails_sample
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
@@ -18,7 +18,7 @@ services:
     stdin_open: true
 
   db:
-    container_name: maria
+    container_name: maria_sample
     image: mariadb:10.0
     environment:
       MYSQL_ROOT_PASSWORD: 'root'
